navigation menu items were bleeding through and preventing clicks on various components

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -55,7 +55,8 @@
         height: 100vh;
         position: fixed;
         top: 0;
-        left: 0;
+        //left: 0;
+        left: -100%;
         z-index: 1500;
         
         opacity: 0;
@@ -114,6 +115,7 @@
    &__checkbox:checked ~ &__nav {
        opacity: 1;
        width: 100%;
+       left: 0;
    }
 
     // ICON
